# Nlight

./: .flake8  .gitignore  CNAME  LICENSE  NlightNuitka.bat  NlightPyinstaller.bat  README.md  auth.py  catalog_manager.py  chapters.py  compile_exe.bat  const.py  database.py  desu.py  desuUI.py  desuUI.ui  desu_chaptersUI.py  desu_chaptersUI.ui  desu_genresUI.py  desu_genresUI.ui  desu_info.py  desu_info.ui  desu_library.py  desu_library.ui  desu_mylistUI.py  desu_mylistUI.ui  desu_readerUI.py  desu_readerUI.ui  desu_res.qrc  desu_res_rc.py  file_manager.py  form_auth.py  form_character.py  form_facial.py  form_genres.py  form_history.py  form_info.py  form_library.py  form_rate.py  form_reader.py  (+16 more)
.github/ISSUE_TEMPLATE/: Bug.yml  bug_report.md
.github/readme/: README_en.md  README_ru.md  README_uk.md
.github/workflows/: python-app.yml
app_widgets/: items_list_widget.py  side_widget.py
app_windows/: main_window.py  reader.py
const/: app.py  desu_items.py  icons.py  lists.py  shikimori_items.py  styles.py  translations.py  urls.py
data/: resource.py  resource.qrc
data/catalogs/: desu.json  mangalib.json  remanga.json  shikimori.json  slashlib.json
data/i18n/: English.qm  English.ts  Russian.qm  Russian.ts  Ukrainian.qm  Ukrainian.ts  en_US.qm  en_US.ts  ru_RU.qm  ru_RU.ts  uk_UA.qm  uk_UA.ts
data/parsers/: desu.json
data/styles/: nlight_dark.qss
data/translations/: ru.qm  ru.qph  ru.ts
data/ui/: auth.py  auth.ui  character.py  character.ui  facial.py  facial.ui  genres.py  genres.ui  history.py  history.ui  info.py  info.ui  library.py  library.ui  mainWindow.py  mainWindow.ui  manga_item.py  manga_item.ui  rate.py  rate.ui  reader.py  reader.ui  settings.py  settings.ui  shikimori.py  shikimori.ui
desureader/: __init__.py
desureader/dialogs/: Auth.py  Character.py  Rate.py  __init__.py  character.py  genres.py
desureader/parsers/: Desu.py  LocalLib.py  MangaDex.py  Parser.py  Rulate.py  Shikimori.py
desureader/utils/: catalog_manager.py  database.py  file_manager.py  text_formatter.py  utils.py
desureader/widgets/: BaseWidget.py  Facial.py  History.py  Info.py  Library.py  Settings.py  Shikimori.py  __init__.py  facial.py  history.py  info.py  library.py  shikimori.py
desureader/windows/: Parent.py  Reader.py  main_window.py  reader.py
docs/: CNAME
form/: authUI.py  authUI.ui  desuUI.py  desuUI.ui  desu_genresUI.py  desu_genresUI.ui  desu_info.py  desu_info.ui  desu_library.py  desu_library.ui  desu_readerUI.py  desu_readerUI.ui  itemsList.py  mainWindow.py  mainWindow.ui  shikimoriUI.py  shikimoriUI.ui  sideMenu.py  sideMenu.ui  ui_history.py  ui_history.ui  ui_ui_history.py
forms/: auth.py  auth.ui  authUI.py  authUI.ui  character.py  character.ui  desuUI.py  desuUI.ui  desu_genresUI.py  desu_genresUI.ui  desu_info.py  desu_info.ui  desu_library.py  desu_library.ui  desu_readerUI.py  desu_readerUI.ui  facial.py  facial.ui  genres.py  genres.ui  history.py  history.ui  info.py  info.ui  itemsList.py  itemsList.ui  library.py  library.ui  mainWindow.py  mainWindow.ui  rate.py  rate.ui  rateManga.py  rateManga.ui  reader.py  reader.ui  shikimori.py  shikimori.ui  shikimoriUI.py  shikimoriUI.ui  (+6 more)
nlightreader/: __init__.py
parser/: Desu.py  LocalLib.py  MangaDex.py  Parser.py  Ranobehub.py  Rulate.py  Shikimori.py
pkg_res/: Nlight.desktop
requirements/: dev.txt  prod.txt  test.txt
requiremnts/: dev.txt  prod.txt
(+232 files in other folders)
