[project]
name = "nlight"
version = "1.10.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "darkdetect>=0.8.0",
    "oauthlib>=3.2.0",
    "platformdirs>=3.1.1",
    "pyside6>=6.3.0",
    "pyside6-fluent-widgets>=1.4.1",
    "render-html>=1.0.1",
    "requests>=2.28.1",
    "requests-oauthlib>=1.3.1",
    "sqlalchemy>=2.0.25",
    "validators>=0.33.0",
]

[tool.flake8]
max-line-length = 79
inline-quotes = "double"
import-order-style = "pep8"
application-import-names = [
    "data",
    "nlightreader",
    "keys",
]
ignore = [
    "F401",
    "N802",
    "W503",
]
exclude = [
    "build",
    "build_nuitka",
    "data",
    "dist",
    "venv",
]


[tool.ruff]
line-length = 79
target-version = "py311"
extend-exclude = ["data"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "COM",
    "E",
    "EM",
    "ERA",
    "F",
    "FIX",
    "I",
    "ISC",
    "N",
    "PTH",
    "RET",
    "RSE",
    "Q",
    "T20",
    "UP",
    "W",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
order-by-type = false
known-first-party = [
    "nlightreader",
    "data",
    "keys",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true
